objects/Apex_Job__mdt.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACE (Customer Price Changes)</fullName>
                    <default>true</default>
                    <label>ACE (Customer Price Changes)</label>
                </value>
                <value>
                    <fullName>AOPS-SFDC Sync</fullName>
                </value>
                <value>
                    <fullName>CCPA</fullName>
                </value>
                <value>
                    <fullName>Customer Migration</fullName>
                </value>
                <value>
                    <fullName>Customer Migration - Mod 5</fullName>
                </value>
                <value>
                    <fullName>Data Correction &amp; Cleanup</fullName>
                </value>
                <value>
                    <fullName>Grand &amp; Toy (Canada)</fullName>
                </value>
                <value>
                    <fullName>K-12 Reporting</fullName>
                </value>
                <value>
                    <fullName>Lead Triage</fullName>
                </value>
                <value>
                    <fullName>MDR</fullName>
                </value>
                <value>
                    <fullName>Reassignment</fullName>
                </value>
                <value>
                    <fullName>Tier 1 (Partner)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>WRF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency_Metric__c</fullName>
        <label>Frequency Metric</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                    <default>true</default>
                    <label>Day</label>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Apex Job Monitoring</label>
    <pluralLabel>Apex Jobs Monitoring</pluralLabel>
</CustomObject>